# gsplugin-customcategories

./: AUTHORS  ChangeLog  Makefile.am  README.md  _service  cleanup.sh  configure.ac  gsplugin-customcategories.spec
include/: Makefile.am  gsplugin-customcategories.h
rpm/: gsplugin-customcategories-rpmlintrc  gsplugin-customcategories.changes  gsplugin-customcategories.spec
src/: Makefile.am  gsplugin-customcategories.c
