lib_LTLIBRARIES = libgs_plugin_customcategories.la
libgs_plugin_customcategories_la_SOURCES = gsplugin-customcategories.c
AUTOMAKE_OPTIONS = subdir-objects
libgs_plugin_customcategories_la_LDFLAGS = -shared -fPIC $(GS_LIBS) -g
libgs_plugin_customcategories_la_CFLAGS = -DI_KNOW_THE_GNOME_SOFTWARE_API_IS_SUBJECT_TO_CHANGE $(GS_CFLAGS) -I../include
